syntax = "proto3";
package durable;
option go_package = "github.com/sanjaymijar/my-durable-execution/pb/durable";

message Command {
  string invocation_id = 1;
  string handler = 2;
  string service = 3;
  bytes args = 4;
  string partition_key = 5;
  int64 sequence = 6;
}

message JournalEntry {
  int32 step_number = 1;
  string step_type = 2;
  bytes request = 3;
  bytes response = 4;
  string error = 5;
}

message AwakeableState {
  string awakeable_id = 1;      // Unique ID for this awakeable
  string invocation_id = 2;     // Workflow invocation waiting for this
  bool resolved = 3;            // Whether awakeable has been resolved
  bytes result = 4;             // Result data (if resolved)
  string error = 5;             // Error message (if rejected)
  int64 created_at = 6;         // Timestamp when created
}

message ExecutionState {
  string invocation_id = 1;
  string handler = 2;
  repeated JournalEntry journal = 3;
  bytes current_state = 4;  // Deprecated: use workflow_state instead
  string status = 5;
  int32 current_step = 6;        // Current step number being executed (-1 if not started)
  string current_step_type = 7;  // Type of current step (e.g., "HelloService.SayHello")
  map<string, bytes> workflow_state = 8;  // Workflow-scoped state (ctx.Get/Set)
  map<string, AwakeableState> awakeables = 9;  // Awakeables waiting for external completion
}
